made edits to index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <hr>
         <h2>SOFTWARE ENGINEER & FULL-STACK DEVELOPER</h2>
         <hr>
-        <p class="passion">My passion is to build awesome software, always be learning, solve problem big and small, and make the world a better place one day at a time.</p>
+        <p class="passion">My passion is to build, always be learning, solving problems big and small, and make peoples experiences better one line of code at a time.</p>
 
     </section>
 
