Made adjustment to the grammar and style for index.html

--- a/about.html
+++ b/about.html
@@ -51,17 +51,14 @@
         <img class="self" src="images/Steven4.png" alt="">
         <h2 class="about_h2">ABOUT ME</h2>
         <div id="about_me">
-            <p>I've been working in real estate for 6 years in both commercial and residential. At my previous job at a
-                real estate start up,
-                I worked as a Product Manager working with internal stakeholder to build internal tools to make their
-                jobs more efficient and enjoyable. In that role,
-                it help me realize how passionate I am software engineering. I love learning about the techincal aspect
-                of project I was working on and
-                I always took extra time to talk to engineers to
-                learn more. I had a chance to build systems using
-                Zapier a low code automation tool for web applications. After that moment I was hooked and knew if I wanted to level
-                up my skills I will need to learn the fundementals of coding to build more complex and sophicated
-                applications.</p>
+            <p>I’ve been working in commercial and residential for the past 6 years. During my time as a Project Manager
+                at a real estate startup, I worked with internal stakeholders to build internal tools to increase job
+                efficiency. That role allowed me to realize my passion for software engineering. I loved learned about
+                the technical aspect of the project I was working on and always took extra time to engage with the
+                engineers to learn more. In addition to working with engineers, I had the opportunity to build systems
+                using Zapier, a low code automation tool for web applications. From there, I was hooked and knew I
+                wanted to expand my skills to build complex and sophisticated applications by learning the fundamentals
+                of coding.</p>
         </div>
     </section>
     <footer>
