--- a/projects.html
+++ b/projects.html
@@ -69,13 +69,13 @@
                 <div class="col-lg-6">
                     <img src="images/ScoreKeeper.png" alt="" class="img-fluid">
                     <ul>
-                        <li>Score Keeper, simple website designed to help keep score for ping pongs</li>
+                        <li>Score Keeper, simple website designed to help keep score for ping pong</li>
                     </ul>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/Price table.png" alt="" class="img-fluid">
                     <ul>
-                    <li>Price Table, simple website designed to help display pricing tier for a companies products</li>
+                    <li>Price Table, simple website designed to help display pricing tier for a company's products</li>
                     </ul>
                 </div>
             </div>
