--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.ico">
-    <title>Steven's Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/style.css">
@@ -15,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <title>Steven's Website</title>
 </head>
 
 <body>
@@ -49,11 +49,11 @@
 
 
     <section class="hero">
-        <h1>Hi there, I'm Steven,</h1>
+        <h1>Hi there, I'm Steven.</h1>
         <hr>
         <h2>SOFTWARE ENGINEER & FULL-STACK DEVELOPER</h2>
         <hr>
-        <p class="passion">My passion is to build, always be learning, solving problems big and small, and make peoples experiences better one line of code at a time.</p>
+        <p class="passion">I am a lifetime learner who is passionate about building, solving problems, and making other people’s experiences better one line of code at a time.</p>
 
     </section>
 
