about.html edits

--- a/about.html
+++ b/about.html
@@ -51,13 +51,13 @@
         <img class="self" src="images/Steven4.png" alt="">
         <h2 class="about_h2">ABOUT ME</h2>
         <div id="about_me">
-            <p>I’ve been working in commercial and residential for the past 6 years. During my time as a Project Manager
+            <p>I’ve been working in commercial and residential real estate for the past 6 years. During my time as a Product Manager
                 at a real estate startup, I worked with internal stakeholders to build internal tools to increase job
-                efficiency. That role allowed me to realize my passion for software engineering. I loved learned about
-                the technical aspect of the project I was working on and always took extra time to engage with the
+                efficiency. That role allowed me to realize my passion for software engineering. I loved learning about
+                the technical aspect of the product I was working on and always took extra time to engage with the
                 engineers to learn more. In addition to working with engineers, I had the opportunity to build systems
                 using Zapier, a low code automation tool for web applications. From there, I was hooked and knew I
-                wanted to expand my skills to build complex and sophisticated applications by learning the fundamentals
+                wanted to expand my skills to build more complex and sophisticated applications by learning the fundamentals
                 of coding.</p>
         </div>
     </section>
